vlib/v/checker/tests/unknown_c_function_call_err.vv
fn main() {
	C.bad_fn()
}
